--- a/color.html
+++ b/color.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h1 style="background-color:#e0ad8f;">Hello World</h1>
+<h1 style="background-color:#ccff66;">Hello World</h1>
 
 <p style="background-color:Tomato;">
 color format
