--- a/color.html
+++ b/color.html
@@ -5,7 +5,7 @@
 <h1 style="background-color:#ccff66;">Hello World</h1>
 
 <p style="background-color:Tomato;">
-color format
+Background color
 </p>
 
 </body>
