external css link web code

--- a/INTERNAL_CSS.HTML
+++ b/INTERNAL_CSS.HTML
@@ -3,7 +3,7 @@
 <head>
 <style>
 body {background-color: powderblue;}
-h2   {color: blue;}
+h2   {color: blue;background-color:white}
 p    {color: red;font-family:arial;}
 </style>
 </head>
