internal css link web code

--- a/INTERNAL_CSS.HTML
+++ b/INTERNAL_CSS.HTML
@@ -8,7 +8,7 @@ p    {color: red;font-family:arial;}
 </style>
 </head>
 <body>
-<h2>Internal css  used code in this webpage<h2>
+<h2>Internal css  used code in this webpages<h2>
 <p> This is paragraph</p>
 </body>
 </html>
