--- a/INTERNAL_CSS.HTML
+++ b/INTERNAL_CSS.HTML
@@ -3,12 +3,12 @@
 <head>
 <style>
 body {background-color: powderblue;}
-h2   {color: blue;background-color:white}
+h2   {color: blue;}
 p    {color: red;font-family:arial;}
 </style>
 </head>
 <body>
-<h2>Internal css  used code in this webpages<h2>
+<h2>Internal css  used code in this webpage<h2>
 <p> This is paragraph</p>
 </body>
 </html>
