target attribute _self in hyperlink

--- a/target_hyperlink.html
+++ b/target_hyperlink.html
@@ -7,6 +7,6 @@
 <a href="external_css.html" target="_blank">Target attribute in hyperlink</a> 
 
 <p>If target="_blank", the link will open in a new browser window or tab.</p>
-
+<p>If target="_self", Default. Opens the document in the same window/tab as it was clicked</p>
 </body>
 </html>
