hyerlink element target attribute have some value

--- a/target_hyperlink.html
+++ b/target_hyperlink.html
@@ -3,10 +3,14 @@
 <body>
 
 <h2>The target Attribute</h2>
+<hr size="2px" color="red" >
 
-<a href="external_css.html" target="_blank">Target attribute in hyperlink</a> 
-
-<p>If target="_blank", the link will open in a new browser window or tab.</p>
+<a href="external_css.html" target="_self">Target attribute with value _self in hyperlink</a> 
 <p>If target="_self", Default. Opens the document in the same window/tab as it was clicked</p>
+<a href="external_css.html" target="_blank">Target  attribute with value _blank in hyperlink</a> 
+<p>If target="_blank", the link will open in a new browser window or tab.</p>
+
+<a href="external_css.html" target="_top">Target attribute _top in hyperlink</a> 
+<p>If target="_top",Opens the document in the full body of the window</p>
 </body>
 </html>
