email send link use mailti:abc@gmail.com

--- a/img_Link.html
+++ b/img_Link.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <a href="external_css.html" target=_blank>
-        <img src="ha.jpg" width="500px" height="700px" alt="no imgage">
+        <img src="ha.jpg" width="500px" height="700px" alt="no image">
     </a>
 </body>
 </html>
