link hyperlink tag with href="mailto:abc@gmail.com"

--- a/email_link.html
+++ b/email_link.html
@@ -10,6 +10,7 @@
     <p style="color:rgb(17, 126, 177);">Use mailto: inside the href attribute to create a
          link that opens the user's email program (to let them send a new email):</p>
 
-    <a href="mailto:cboy786choch@gmail.com">send</a>
+    <a href="mailto:cboy786choch@outlook.com">send</a>
+    <a href="tel:0948476367748">send</a>
 </body>
 </html>
