--- a/img_Link.html
+++ b/img_Link.html
@@ -6,7 +6,7 @@
     <title>IMG Link</title>
 </head>
 <body>
-    <a href="external_css.html" target=_blank>
+    <a href="external_css.html" target=_blank" >
         <img src="ha.jpg" width="500px" height="700px" alt="no image">
     </a>
 </body>
