document.location="url" command

--- a/button.html
+++ b/button.html
@@ -3,9 +3,11 @@
 <head>
     
     <title>Button Link</title>
-</head>
+
 <body>
     <button onclick="document.getElementById('demo').innerHTML = Date()">click </button>
+
     <p id="demo"></p>
+    <button onclick="document.location='color.html'">click </button>
 </body>
 </html>
