--- a/mark_pre.html
+++ b/mark_pre.html
@@ -4,9 +4,10 @@
     
     <title>Mark is use in Pre</title>
 </head>
-<body>
+<body background="ha.jpg" style="background-repeat: no-repeat;background-size: 100% 500%;">
     <pre>
        poem <mark><strong>jonh</strong></mark> 
+
     </pre>
     
 </body>
