--- a/floatingcss.html
+++ b/floatingcss.html
@@ -9,12 +9,12 @@
 <body>
     <p title="">
         <img src="hrrr.jpeg" style="width: 50px;height:60px;">
-        This image is align image in left without float css property but text start from right down side of image.
+        This image is align image in left without float css property but<br> text start from right down side of image.
     
     </p>
     <p title="">
         <img src="hrrr.jpeg" style="float:left;width: 50px;height:60px;">
-        This image is align image in left of text. By float property css and text start from right upper side of image. 
+        This image is align image in left of text. By float property css and text<br> start from right upper side of image. 
     
     </p>
 </body>
