--- a/IIFE.html
+++ b/IIFE.html
@@ -11,7 +11,12 @@
         // Ways to create IIFE
 
 (function() {
-  alert("Parentheses around the function");
+    ap="rrr";
+    if(false)
+    {
+        var ap;
+    }
+  alert("Parentheses around the function"+ap);
 })();
 
 (function() {
@@ -29,8 +34,13 @@
 <script>
     // Ways to create IIFE
 
-(function() {
-  alert("Parentheses around the function");
+    (function() {
+    ap="rrr";
+    if(false)
+    {
+        var ap;
+    }
+  alert("Parentheses around the function"+ap);
 })();
 
 (function() {
