--- a/varNoscope.html
+++ b/varNoscope.html
@@ -8,6 +8,13 @@
 </head>
 <body>
     <script>
+
+        {
+            var a=10;
+        }
+        alert(a);
+    </script>
+    <script>
         function fun()
         {
         if(true){
