--- a/dtObject.html
+++ b/dtObject.html
@@ -71,7 +71,7 @@
        </script>
 
        <script>
-        //delete the property in object 
+        //remove a property , we can use the delete operator
          delete stud.age;
        </script>
 </body>
