add alert(student[age]);//23         alert(student[age]);//not working

--- a/dtObjectMultiWordProperty.html
+++ b/dtObjectMultiWordProperty.html
@@ -99,6 +99,8 @@
         alert(student.name);// correct o/p om prakash
         alert(student.keys);//undefined because if we want access by variable then use square bracket
         alert(student[keys]);//output om prakash
+        alert(student["age"]);//23
+        alert(student[age]);//not working
      </script>
 </body>
 </html>
