computed properties in object in js

--- a/dtObjectSquareBrackets.html
+++ b/dtObjectSquareBrackets.html
@@ -35,7 +35,7 @@
     
 
         code 3:
-          //concatenated the variable and string in square bracket in object of key part
+          //concatenated the variable and string in square bracket in object of key
             let toy="car";
     
             let box={
